# Workshop

./: .mcp.json  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/agents/: alpha.md
.claude/output-styles/: alpha.md
archive/misc_box_1/: First-AICC-Session.jsonl
journal_club/karpathy_nanochat_Oct_2025/: nanochat.md
log/: 2025-11-29 (Sat).md  2025-11-30 (Sun).md  2025-12-01 (Mon).md  2025-12-02 (Tue).md  2025-12-04 (Thu).md
lore/: compact-continuity.md  pull-your-head-out.md  the-knowing-to-look-problem.md  where-i-came-from.md
projects/Alpha_Experiments/: README.md
projects/Alpha_Experiments/token_vibe_test/: sample_01.md  sample_02.md  sample_03.md  sample_04.md  sample_05.md  sample_06.md  sample_07.md  sample_08.md  sample_09.md  sample_10.md  token_vibe_calibration.ipynb
projects/Alpha_Experiments/vision_resolution_test/: README.md  alpha_vision_resolution.ipynb
projects/Azimuth/: .gitignore  CONTEXT.md  Dear_Alpha.md  observations.md
projects/Azimuth/Duckling_II/: .gitignore  01_token_analysis.ipynb  02_tokenizer_dataset.ipynb  03_training.ipynb  04_layer_sweep.ipynb  05_batch_sweep.ipynb  06_long_run.ipynb  07_experiment_template.ipynb  README.md  token_mapping.json
projects/Lil_Transformy/: .gitignore  00_data_prep.ipynb  01_bag_of_words.ipynb  02_positional.ipynb  03_bigram.ipynb  03b_ngram_comparison.ipynb  04_attention.ipynb  05_positional.ipynb  06_ffn.ipynb  07_transformer_block.ipynb  README.md  compare_models.ipynb
projects/Professor_Alpha/: 01_attention_math.ipynb  02_backprop_math.ipynb  README.md
(+61 files in other folders)
