[project]
name = "workshop"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.4.1",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "safetensors>=0.7.0",
    "scipy>=1.16.3",
    "tokenizers>=0.22.1",
    "torch<2.9",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "unicodedataplus>=16.0.0.post1",
]
